@@ -61,6 +61,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13258: Use callable() built-in in the standard library.
+
 - Issue #13273: fix a bug that prevented HTMLParser to properly detect some
   tags when strict=False.
 
